Bug 78059 - [SNB/IVB/HSW/BYT/BDW regression] igt/drv_suspend/forcewake cause "WARNING: CPU: 6 PID: 4328 at drivers/gpu/drm/i915/intel_uncore.c:460 gen6_gt_force_wake_put+0xde/0x134 [i915]()"
Summary: [SNB/IVB/HSW/BYT/BDW regression] igt/drv_suspend/forcewake cause "WARNING: CP...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: highest blocker
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-29 05:15 UTC by Guo Jinxian
Modified: 2016-10-12 11:01 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (115.92 KB, text/plain)
2014-04-29 05:15 UTC, Guo Jinxian
no flags Details
dmesg (117.52 KB, text/plain)
2014-06-13 03:47 UTC, Guo Jinxian
no flags Details

Description Guo Jinxian 2014-04-29 05:15:57 UTC
Created attachment 98155 [details]
dmesg

System Environment:
--------------------------
Platform: IVB SNB HSW
kernel:   (drm-intel-nightly)11ddb598492d1f97f894495eea398febb41a9eb0


Bug detailed description:
----------------------------
WARNING: CPU: 6 PID: 4328 at drivers/gpu/drm/i915/intel_uncore.c:460 gen6_gt_force_wake_put+0xde/0x134 [i915]() while running igt/drv_suspend/forcewake on -nightyly(11ddb598492d1f97f894495eea398febb41a9eb0) -next-queued(b7c0d9df97c10ec5693a838df2fd53058f8e9e96) and -fixs(7f1950fbb989e8fc5463b307e062b4529d51c862)

The CallTrace always exist

CallTrace:
[  112.388275] WARNING: CPU: 6 PID: 4328 at drivers/gpu/drm/i915/intel_uncore.c:460 gen6_gt_force_wake_put+0xde/0x134 [i915]()
[  112.388902] Modules linked in: ip6table_filter ip6_tables ebtable_nat ebtables nf_conntrack_ipv4 nf_defrag_ipv4 xt_conntrack nf_conntrack ipt_REJECT iptable_mangle xt_tcpudp iptable_filter ip_tables x_tables bridge stp llc ipv6 dm_mod snd_hda_codec_realtek snd_hda_codec_generic snd_hda_codec_hdmi iTCO_wdt iTCO_vendor_support dcdbas serio_raw pcspkr i2c_i801 snd_hda_intel snd_hda_controller snd_hda_codec lpc_ich snd_hwdep shpchp mfd_core snd_pcm snd_timer snd soundcore battery acpi_cpufreq i915 video button drm_kms_helper drm
[  112.390929] CPU: 6 PID: 4328 Comm: drv_suspend Not tainted 3.15.0-rc2_drm-intel-nightly_11ddb5_20140428+ #2094
[  112.391614] Hardware name: Dell Inc. OptiPlex 9020/0DNKMN, BIOS A03 09/17/2013
[  112.392004]  0000000000000000 0000000000000009 ffffffff81722e60 0000000000000000
[  112.392367]  ffffffff8103516a 0000000000000286 ffffffffa008edef 0000000100000002
[  112.392720]  ffff8801153e0000 0000000000000008 ffff8801153e0070 0000000000000246
[  112.393098] Call Trace:
[  112.393428]  [<ffffffff81722e60>] ? dump_stack+0x41/0x51
[  112.393771]  [<ffffffff8103516a>] ? warn_slowpath_common+0x73/0x8b
[  112.394123]  [<ffffffffa008edef>] ? gen6_gt_force_wake_put+0xde/0x134 [i915]
[  112.394445]  [<ffffffffa008edef>] ? gen6_gt_force_wake_put+0xde/0x134 [i915]
[  112.394774]  [<ffffffffa006ed75>] ? i915_forcewake_release+0x1c/0x23 [i915]
[  112.395094]  [<ffffffff810e197e>] ? __fput+0xdb/0x1a8
[  112.395398]  [<ffffffff81049668>] ? task_work_run+0x73/0x87
[  112.395696]  [<ffffffff810024ce>] ? do_notify_resume+0x53/0x68
[  112.396026]  [<ffffffff8172d8aa>] ? int_signal+0x12/0x17
[  112.396319] ---[ end trace 97d19685c22bbb77 ]---
[  112.396878] [drm:intel_crtc_cursor_set] cursor off
[  112.396880] [drm:intel_crtc_set_config] [CRTC:5] [FB:30] #connectors=1 (x y) (0 0)
[  112.396882] [drm:intel_set_config_compute_mode_changes] computed changes for [CRTC:5], mode_changed=0, fb_changed=0
[  112.396883] [drm:intel_modeset_stage_output_state] [CONNECTOR:13:VGA-1] to [CRTC:5]
[  112.396884] [drm:intel_crtc_cursor_set] cursor off
[  112.396885] [drm:intel_crtc_set_config] [CRTC:8] [NOFB]
[  112.396886] [drm:intel_set_config_compute_mode_changes] computed changes for [CRTC:8], mode_changed=0, fb_changed=0
[  112.396887] [drm:intel_modeset_stage_output_state] [CONNECTOR:13:VGA-1] to [CRTC:5]
[  112.396888] [drm:intel_crtc_cursor_set] cursor off
[  112.396889] [drm:intel_crtc_set_config] [CRTC:11] [NOFB]
[  112.396890] [drm:intel_set_config_compute_mode_changes] computed changes for [CRTC:11], mode_changed=0, fb_changed=0
[  112.396890] [drm:intel_modeset_stage_output_state] [CONNECTOR:13:VGA-1] to [CRTC:5]
[  112.510831] ata3: SATA link up 1.5 Gbps (SStatus 113 SControl 300)
[  112.513234] ata3.00: configured for UDMA/100
[  113.756348] [drm] Enabling RC6 states: RC6 on, RC6p off, RC6pp off
[  113.760375] [drm:gen6_enable_rps] Overclocking supported. Max: 1200MHz, Overclock max: 1200MHz

output:
./drv_suspend  --run-subtest forcewake
IGT-Version: 1.6-ga595a40 (x86_64) (Linux: 3.15.0-rc2_drm-intel-fixes_7f1950_20140428+ x86_64)
rtcwake: wakeup from "mem" using /dev/rtc0 at Tue Apr 29 05:09:34 2014
Subtest forcewake: SUCCESS

Reproduce steps:
---------------------------- 
1. ./drv_suspend  --run-subtest forcewake
Comment 1 Chris Wilson 2014-04-29 09:39:35 UTC
Fix on mailing list.
Comment 2 lu hua 2014-05-04 07:03:44 UTC
It also happens on BYT and BDW.
Comment 3 Daniel Vetter 2014-05-15 10:02:49 UTC
Upgrading to regression. Also this breaks runtime PM nowadays so has serious impact. Ramping up priority.
Comment 4 Gordon Jin 2014-05-16 00:53:11 UTC
increase priority to high.
Comment 5 Daniel Vetter 2014-06-12 21:23:46 UTC
Should be resovled with latest -nightly.
Comment 6 Guo Jinxian 2014-06-13 03:47:41 UTC
Created attachment 100948 [details]
dmesg

This bug able to reproduce on latest -next-queued(a7bac7fb6c8b077fc11084bf539989f43a45976a) and -fixes(ce9557b9fe17012dea2447e643a1047c27a00838).
Comment 7 Guo Jinxian 2014-06-13 05:42:08 UTC
(In reply to comment #5)
> Should be resovled with latest -nightly.

I didn't reproduce this issue on latest -nightly(1d3e80d9ff52ecaeecc5b78de32f9bb07ad2231f).
Comment 8 Guo Jinxian 2014-06-13 07:50:55 UTC
Because I unable to reproduce on latest -nightly, only able to reproduce on -fixes and -next-queued on IVB. Change the status back to Resolved fixed.
I will further investigate if this bug is fixed.
Comment 9 Guo Jinxian 2014-06-17 07:07:35 UTC
Checked on latest -fixes and next-queued. This bug had fixed.
Comment 10 Jari Tahvanainen 2016-10-12 11:01:41 UTC
Closing verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.